[gd_scene load_steps=11 format=1]

[ext_resource path="res://arcade_upgrade.gd" type="Script" id=1]
[ext_resource path="res://little_background.png" type="Texture" id=2]
[ext_resource path="res://vgg_font.fnt" type="BitmapFont" id=3]
[ext_resource path="res://arcade_worst.png" type="Texture" id=4]
[ext_resource path="res://arcade_decent.png" type="Texture" id=5]
[ext_resource path="res://arcade_good.png" type="Texture" id=6]
[ext_resource path="res://arcade_great.png" type="Texture" id=7]
[ext_resource path="res://arcade_best.png" type="Texture" id=8]
[ext_resource path="res://button.png" type="Texture" id=9]
[ext_resource path="res://not_opened.png" type="Texture" id=10]

[node name="arcade_upgrade" type="Node2D"]

transform/pos = Vector2( 511.609, 299.032 )
transform/scale = Vector2( 15.988, 9.34513 )
script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( 0.147015, 0.94031 )
transform/scale = Vector2( 0.0500382, 0.0639212 )
texture = ExtResource( 2 )

[node name="label" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.15 )
hint/tooltip = "Unlocking this upgrade will repair the broken arcade stations in this town."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -10.0
margin/top = -30.0
margin/right = 122.0
margin/bottom = 15.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0.623529, 0.823529, 1, 1 )
bbcode/enabled = false
bbcode/bbcode = "Arcades"
visible_characters = -1
percent_visible = 1.0

[node name="notifications" type="RichTextLabel" parent="."]

visibility/visible = false
rect/scale = Vector2( 0.075, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -16.0
margin/top = 15.0
margin/right = 480.0
margin/bottom = 66.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "You cannot afford that!"
visible_characters = -1
percent_visible = 1.0

[node name="worst" type="Node2D" parent="."]

transform/pos = Vector2( -23.4797, -2.90647 )
transform/scale = Vector2( 0.193376, 0.434718 )

[node name="label" type="RichTextLabel" parent="worst"]

rect/scale = Vector2( 0.4, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -26.0
margin/top = 10.0
margin/right = 171.0
margin/bottom = 77.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0.623529, 0.823529, 1, 1 )
bbcode/enabled = false
bbcode/bbcode = "Worst"
visible_characters = -1
percent_visible = 1.0

[node name="worst_button" type="TextureButton" parent="worst"]

rect/scale = Vector2( 0.06, 0.05 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -28.0
margin/top = -34.0
margin/right = 772.0
margin/bottom = 752.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 2, 2 )
params/stretch_mode = 0

[node name="price" type="RichTextLabel" parent="worst"]

rect/scale = Vector2( 0.4, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -26.0
margin/top = 25.0
margin/right = 161.0
margin/bottom = 83.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0.623529, 0.823529, 1, 1 )
bbcode/enabled = false
bbcode/bbcode = "Owned"
visible_characters = -1
percent_visible = 1.0

[node name="decent" type="Node2D" parent="."]

transform/pos = Vector2( -12.5047, -2.33857 )
transform/scale = Vector2( 0.185686, 0.434718 )

[node name="label" type="RichTextLabel" parent="decent"]

rect/scale = Vector2( 0.4, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -15.0
margin/top = 9.0
margin/right = 170.0
margin/bottom = 62.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0.623529, 0.823529, 1, 1 )
bbcode/enabled = false
bbcode/bbcode = "Decent"
visible_characters = -1
percent_visible = 1.0

[node name="decent_button" type="TextureButton" parent="decent"]

rect/scale = Vector2( 0.06, 0.05 )
hint/tooltip = "Click to select the decent arcade upgrades."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -19.0
margin/top = -35.0
margin/right = 781.0
margin/bottom = 751.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 0
params/scale = Vector2( 2, 2 )
params/stretch_mode = 0

[node name="price" type="RichTextLabel" parent="decent"]

rect/scale = Vector2( 0.4, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -14.0
margin/top = 23.0
margin/right = 231.0
margin/bottom = 72.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0.623529, 0.823529, 1, 1 )
bbcode/enabled = false
bbcode/bbcode = "200"
visible_characters = -1
percent_visible = 1.0

[node name="good" type="Node2D" parent="."]

transform/pos = Vector2( 0.0924492, -2.33857 )
transform/scale = Vector2( 0.185686, 0.434718 )

[node name="label" type="RichTextLabel" parent="good"]

rect/scale = Vector2( 0.4, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -15.0
margin/top = 8.0
margin/right = 180.0
margin/bottom = 61.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0.623529, 0.823529, 1, 1 )
bbcode/enabled = false
bbcode/bbcode = "Good"
visible_characters = -1
percent_visible = 1.0

[node name="good_button" type="TextureButton" parent="good"]

rect/scale = Vector2( 0.06, 0.05 )
hint/tooltip = "Click to select the good arcade upgrades."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -21.0
margin/top = -34.0
margin/right = 779.0
margin/bottom = 752.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/scale = Vector2( 2, 2 )
params/stretch_mode = 0

[node name="price" type="RichTextLabel" parent="good"]

rect/scale = Vector2( 0.4, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -16.0
margin/top = 23.0
margin/right = 207.0
margin/bottom = 86.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0.623529, 0.823529, 1, 1 )
bbcode/enabled = false
bbcode/bbcode = "400"
visible_characters = -1
percent_visible = 1.0

[node name="great" type="Node2D" parent="."]

transform/pos = Vector2( 12.7187, -2.33857 )
transform/scale = Vector2( 0.185686, 0.434718 )

[node name="label" type="RichTextLabel" parent="great"]

rect/scale = Vector2( 0.4, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -23.0
margin/top = 9.0
margin/right = 153.0
margin/bottom = 70.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0.623529, 0.823529, 1, 1 )
bbcode/enabled = false
bbcode/bbcode = "Great"
visible_characters = -1
percent_visible = 1.0

[node name="great_button" type="TextureButton" parent="great"]

rect/scale = Vector2( 0.06, 0.05 )
hint/tooltip = "Click to select the great arcade upgrades."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -29.0
margin/top = -34.0
margin/right = 771.0
margin/bottom = 752.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
params/resize_mode = 0
params/scale = Vector2( 2, 2 )
params/stretch_mode = 0

[node name="price" type="RichTextLabel" parent="great"]

rect/scale = Vector2( 0.4, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -21.0
margin/top = 23.0
margin/right = 199.0
margin/bottom = 82.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0.623529, 0.823529, 1, 1 )
bbcode/enabled = false
bbcode/bbcode = "600"
visible_characters = -1
percent_visible = 1.0

[node name="best" type="Node2D" parent="."]

transform/pos = Vector2( 24.8143, -2.2832 )
transform/scale = Vector2( 0.185686, 0.434718 )

[node name="label" type="RichTextLabel" parent="best"]

rect/scale = Vector2( 0.4, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -21.0
margin/top = 9.0
margin/right = 136.0
margin/bottom = 57.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0.623529, 0.823529, 1, 1 )
bbcode/enabled = false
bbcode/bbcode = "Best"
visible_characters = -1
percent_visible = 1.0

[node name="best_button" type="TextureButton" parent="best"]

rect/scale = Vector2( 0.06, 0.05 )
hint/tooltip = "Click to select the best arcade upgrades."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -31.0
margin/top = -34.0
margin/right = 769.0
margin/bottom = 752.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
params/resize_mode = 0
params/scale = Vector2( 2, 2 )
params/stretch_mode = 0

[node name="price" type="RichTextLabel" parent="best"]

rect/scale = Vector2( 0.4, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -21.0
margin/top = 23.0
margin/right = 194.0
margin/bottom = 80.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0.623529, 0.823529, 1, 1 )
bbcode/enabled = false
bbcode/bbcode = "800"
visible_characters = -1
percent_visible = 1.0

[node name="confirm" type="LinkButton" parent="."]

rect/scale = Vector2( 0.1, 0.1 )
hint/tooltip = "Click to purchase the selected upgrade."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -9.0
margin/top = 23.0
margin/right = 161.0
margin/bottom = 70.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "purchase"
underline = 2

[node name="Sprite" type="Sprite" parent="confirm"]

visibility/behind_parent = true
transform/pos = Vector2( 68.7086, 22.5071 )
transform/scale = Vector2( 0.795429, 0.459507 )
texture = ExtResource( 9 )

[node name="not_opened" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 0.301361, -0.133453 )
transform/scale = Vector2( 0.0467412, 0.0514044 )
texture = ExtResource( 10 )

[node name="RichTextLabel" type="RichTextLabel" parent="not_opened"]

rect/scale = Vector2( 2.5, 2.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -218.0
margin/top = -151.0
margin/right = -27.0
margin/bottom = -43.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0.623529, 0.823529, 1, 1 )
bbcode/enabled = false
bbcode/bbcode = "Sabotaged"
visible_characters = -1
percent_visible = 1.0

[connection signal="button_down" from="worst/worst_button" to="." method="_on_worst_button_button_down"]

[connection signal="button_down" from="decent/decent_button" to="." method="_on_decent_button_button_down"]

[connection signal="button_down" from="good/good_button" to="." method="_on_good_button_button_down"]

[connection signal="button_down" from="great/great_button" to="." method="_on_great_button_button_down"]

[connection signal="button_down" from="best/best_button" to="." method="_on_best_button_button_down"]

[connection signal="button_down" from="confirm" to="." method="_on_confirm_button_down"]


